--- a/index.css
+++ b/index.css
@@ -74,14 +74,16 @@ header{
     justify-self: center;
     margin-left: 5%;
     margin-bottom: 3%;
+    font-size: 0;
     gap:10rem;
-    transition: width 2s, height 2s,  transform 2s, color 3s;
+    transition: width 2s, height 2s,  transform 2s, color 3s,font-size 3s;
 }
 
 .Tech:hover{
     width: 85%;
     height: 60%;
     color:black;
+    font-size: 1rem;
 }
 
 .Tech-Description{
@@ -90,11 +92,16 @@ header{
     gap: 2rem;
     padding: 10px;
     font-size: 0px;
-    transition: font-size 3s;
 }
 
-.Tech-Description:hover{
-    font-size: 1rem;
+#Tech-Title{
+    display: block;
+    font-size: 1.17em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    font-weight: bold;
 }
 
 .Tech-Paragraph{
